<resources>
    <string name="app_name">Seriesfreak</string>
    <string name="Login_Activity_email">Email</string>
    <string name="Login_Activity_password">Contraseña</string>
    <string name="login_text">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_user_text">Usuarios</string>
    <string name="login_account_text">¿No tienes una cuenta?</string>
    <string name="login_register_clickable">Regístrate</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_name">Nombre</string>
    <string name="register_button">Registrarse</string>
    <string name="register_account_text">¿Ya tienes una cuenta?</string>
    <string name="register_login_clickable">Inicia sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
