<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorMain"

            android:theme="@style/AppTheme">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleTextColor="#ffffff"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                app:title="Registro" />
        </com.google.android.material.appbar.AppBarLayout>

    </LinearLayout>



    <EditText
        android:id="@+id/rg_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="4dp"
        android:drawableStart="@mipmap/ic_action_name"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/rg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_logo"
        app:layout_constraintVertical_bias="0.928" />

    <TextView
        android:id="@+id/rg_registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:contextClickable="true"
        android:text="@string/register_login_clickable"
        android:textColor="@color/colorLoginButton"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rg_accountText" />

    <EditText
        android:id="@+id/rg_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawableStart="@mipmap/ic_action_lock"
        android:ems="10"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/rg_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rg_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"

        android:background="@drawable/login_button_circle"
        android:text="@string/register_button"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rg_accountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rg_accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="100dp"
        android:text="@string/register_account_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rg_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/ic_mail"
        android:ems="10"
        android:hint="@string/login_hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/rg_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/rg_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>